--- a/Assignment_1/Config/DefaultEngine.ini
+++ b/Assignment_1/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/CollectionLevel
 EditorStartupMap=/Game/Maps/CollectionLevel
-GlobalDefaultGameMode="/Script/Assignment_1.Assignment_1GameMode"
+GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
 
 
 [/Script/Engine.Engine]
